--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1800,5 +1800,108 @@ stories:
   state: North Carolina
   domain: http://www.clintonnc.com/
   link: https://www.clintonnc.com/news/business/45523/cape-fear-farm-credit-declares-patronage
+images:
+- name: downtown-trucksilo-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-three.jpg
+- name: oldcabin-store-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dali-three.jpg
+- name: old-cabin-oldcabin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-gan-vogh.jpg
+- name: braceros-domingo-ulloa-old-remington-typewriter.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-remington-typewriter.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-dali-three.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dali-three.JPG
+- name: fence-fence-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-far-away.jpg
+- name: stalin-time-adam-smith-edinburgh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-adam-smith-edinburgh.jpg
+- name: gypsy-wagon-gypsywagon-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-sunday.jpg
+- name: razorcliff-razorcliff-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-rain.jpg
+- name: store-on-corner-oldcabin-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-dali.jpg
+- name: yuma-bank-yuma-bak-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-clean-view.jpg
+- name: white-house-lawn-white-house-window-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-clean-view.jpg
+- name: blossombar-crafty-painting-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-62.jpg
+- name: subway-subway-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-alberto-giacometti.jpg
+- name: miamibeach-miamibeach-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-gan-vogh.jpg
+- name: bf-skinner-close-to-all-remote-aircraft.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-close-to-all-remote-aircraft.jpg
+- name: death-valley-death-valley-national-park-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-plentiful.jpg
+- name: oldroad-old-road-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-dali.jpg
+- name: razorwire-DSC-0080-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-really-hot.jpg
+- name: gears-4882162452-fa3126b38d-b-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-sand-paper.jpg
+- name: power-lines-power-lines-empty-space-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colored-circuits.jpg
+- name: border-fence-border-fence-on-hill-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-wols.jpg
+- name: windowmountain-window-mountain-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-marcel-duchamp.jpg
+- name: nazi-invasion-frosty-downtown-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-frosty-downtown-lights.jpg
+- name: walled-garden-walled-garden-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-spagetti-accident.jpg
+- name: christianity-christianity-under-construction-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-creativity.jpg
+- name: old-barn-old-barn-1500-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-aqua.jpg
+- name: mistywoods-babyfoot-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-umberto-bocc.jpg
+- name: mosaic-face-mosaic-face-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dry-skin.jpg
+- name: stories-36349140070-d5ec39cb34-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349140070-d5ec39cb34-z.jpg
+- name: server-cloud-server-racks-door-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit.jpg
+- name: oldsmallboat-oldsmallboat-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-colorful-blocks.jpg
+- name: gypsy-wagon-gypsywagon-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-atari-asteroids.jpg
+- name: rain-princess-british-sgtreet-phone-booth.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-british-sgtreet-phone-booth.jpg
+- name: sand-hand-sand-hand-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-monet-one.jpg
+- name: subway-subway-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-creativity.jpg
+- name: white-house-whitehouse-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-constitution.jpg
+- name: containership-containership-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-5.jpg
+- name: statue-of-liberty-front-view-statueofliberty-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-clean-view.jpg
+- name: oldcabin-oldcabin-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-emily-carr.jpg
+- name: razorwire-DSC-0080-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-rain.jpg
+- name: adam-smith-adam-smith-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-dresden.jpg
+- name: server-cloud-server-racks-door-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-deep-connections.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+- name: art-museum-art-museum-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-yellow-collage.jpg
+- name: yosemite-yosemite-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-bright-sand.jpg
+- name: adam-smith-adam-smith-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-far-away.jpg
+- name: cargo-ship-cargo-ship-on-sea-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-yellow-paper.jpg
+- name: containership-containership-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-electricity.jpg
+- name: paris-paris-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-yellow-paper.jpg
+- name: gypsymosaic-gypsy-eyes-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-satan-red.jpg
 ---
 Wreath Driver Keeps Promise With Final Stop.&nbsp;Indian Police Ban Protests Amid Citizenship Law Outrage.&nbsp;Midland Road Change To Roundabout.&nbsp;Brokerage Head Offers Tips On Protecting Businesses.&nbsp;Hear Adam Schiff's Full Remarks On Articles Of Impeachment.&nbsp;Artist Of The Month, Cordell Naseyoma.&nbsp;Church Events, Christmas Celebrations And More.&nbsp;New Details On Diplomat's Mysterious Brain Injury Linked To 'sonic Attacks'.&nbsp;
